--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
   <div class="taghreed w-50 bg-danger my-4 m-auto p-3 d-flex justify-content-center align-items-center">
     <h2 class="text-white p-4">Taghreed Ashraf</h2>
   </div>
+
+  <div class="okasha w-50 bg-info my-4 m-auto p-3 d-flex justify-content-center align-items-center">
+    <h2 class="text-white p-4">mohamed okasha</h2>
+  </div>
   
 
   <script src="js/bootstrap.bundle.min.js"></script>
