--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
   </div>
 
   
+  <div class="Kholloud w-50 bg-primary my-4 m-auto p-3 d-flex justify-content-center align-items-center">
+    <h2 class="text-light p-4 "> Kholoud Azzam</h2>
+  </div>
 
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/main.js"></script>
