--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> 
 </head>
-<body>
+<body class="bg-warning bg-opacity-25">
 
   <div class="taghreed w-50 bg-danger my-4 m-auto p-3 d-flex justify-content-center align-items-center">
     <h2 class="text-white p-4">Taghreed Ashraf</h2>
